[package]
name = "ritm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An example of combining various libraries for aarch64 OS development."
authors = ["Mateusz Maćkowski <mmac@google.com>"]
repository = "https://github.com/google/ritm"
keywords = ["arm", "aarch64", "cortex-a", "osdev"]
categories = ["embedded", "no-std"]

[dependencies]
aarch64-paging = { version = "0.11", default-features = false }
aarch64-rt = { version = "0.3", features = ["el2", "exceptions", "initial-pagetable", "psci"], default-features = false }
arm-pl011-uart = "0.4"
buddy_system_allocator = { version = "0.12", default-features = false, features = ["alloc", "use_spin"] }
embedded-io = "0.7"
log = "0.4"
percore = "0.2"
safe-mmio = "0.2"
smccc = "0.2"
spin = { version = "0.10", features = ["lazy", "once", "spin_mutex"], default-features = false }

[lints.rust]
deprecated-safe = "warn"
keyword-idents = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "deny"
unstable_features = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
unwrap_used = "warn"
