[package]
name = "psci_test"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aarch64-rt = { version = "0.4", features = ["el1", "exceptions", "psci"], default-features = false }
arm-gic = "0.7"
arm-pl011-uart = "0.5"
arm-psci = "0.2"
arm-sysregs = { version = "0.2", features = ["el2"] }
smccc = "0.2"
spin = "0.10"
